--- a/WebSocket/package.json
+++ b/WebSocket/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
+    "redis": "^4.5.1",
     "ws": "^8.11.0"
   }
 }
