--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,8 +32,9 @@ jobs:
             /usr/bin/git pull origin main 
             forever stopall 
             cd Server
-            npm start
+            npm run start
             kill -9 `lsof -t -i:8080` 
+            cd ..
             forever start ./Server/dist/app.js
             forever start ./WebSocket/server.js
             
