--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,10 +31,8 @@ jobs:
             cd /home/sure/Campux 
             /usr/bin/git pull origin main 
             pm2 kill
-            cd Server
-            pm2 start npm -- start
-            cd ../WebSocket
-            pm2 start npm -- start
+            pm2 start Server/dist/app.js
+
             
              
 
