--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,10 +31,8 @@ jobs:
             cd /home/sure/Campux 
             /usr/bin/git pull origin main 
             pm2 kill
-            cd Server
-            pm2 --name node start --interpreter=/home/sure/.nvm/versions/node/v18.12.1/bin/node npm -- start
-            cd ../WebSocket
-            pm2 --name ws start --interpreter=/home/sure/.nvm/versions/node/v18.12.1/bin/node npm -- start 
+            pm2 --name node start Server/dist/app.js --interpreter=/home/sure/.nvm/versions/node/v18.12.1/bin/node 
+            pm2 --name ws start WebSocket/server.js --interpreter=/home/sure/.nvm/versions/node/v18.12.1/bin/node  
             
              
 
