--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,6 +31,9 @@ jobs:
             cd /home/sure/Campux 
             /usr/bin/git pull origin main 
             pm2 kill
+            cd Server
+            npm run build
+            cd ..
             pm2 --name node start Server/dist/app.js --interpreter=/home/sure/.nvm/versions/node/v18.12.1/bin/node 
             pm2 --name ws start WebSocket/server.js --interpreter=/home/sure/.nvm/versions/node/v18.12.1/bin/node  
             
