--- a/Server/package.json
+++ b/Server/package.json
@@ -28,6 +28,7 @@
     "forever": "^4.0.3",
     "mongoose": "^6.8.1",
     "multer": "^1.4.5-lts.1",
-    "node-pushnotifications": "^2.0.3"
+    "node-pushnotifications": "^2.0.3",
+    "pm2": "^5.2.2"
   }
 }
