--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,9 +32,9 @@ jobs:
             /usr/bin/git pull origin main 
             pm2 kill
             cd Server
-            ./node_modules/.bin/pm2 start app.ts --watch;
+            ./node_modules/.bin/pm2 --name node start app.ts
             cd ..
-            pm2 --name ws start WebSocket/server.js;
+            pm2 --name ws start WebSocket/server.js
             
              
 
