--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,7 +31,7 @@ jobs:
             cd /home/sure/Campux 
             /usr/bin/git pull origin main 
             cd Server;
-            npm build;
+            npm run build;
             
             
              
