--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -30,8 +30,8 @@ jobs:
           script: |
             cd /home/sure/Campux 
             /usr/bin/git pull origin main 
-            cd Server;
-            npm run build;
+            pm2 restart node
+            pm2 restart ws
             
             
              
